------------
mtPaint NEWS
------------

Here is a summary of the main changes in this release (see handbook for full details):

3.51	2021-??-??

	* Kabyle translation added by Yacine Bouklif
	* Czech translation updated by Pavel Fric
	* Slovak translation updated by Jozef Riha
	* Spanish translation updated by Adolfo Jayme
	* Tagalog translation updated by Anjelo delCarmen
	* Animated WebP files now can be loaded into layers, or exploded into frames
	* GIF file format support now is builtin (does not use giflib anymore)
	* GIF loader made yet more tolerant to malformed GIF files
	* ICC colour profiles embedded in GIF and WebP images now can be applied on load
	* BMP loader made more tolerant to malformed BMP files
	* Better support for OS/2 BMP varieties
	* Counting used colours and exact conversion to indexed now are 9-19 times faster
	* Multithreaded decompression enabled for OpenJPEG 2.2+ in Windows version too
	* Support for multithreaded compression in OpenJPEG 2.4 added
	* Support for compiling with libtiff 3 restored
	* Support for compiling with gcc builds (mis)configured with --with-gcc-major-version-only added
	* BUGFIX - RGB clipboard when used in Map effect now is padded with black if too small, as it should
	* BUGFIX - Gradient editor now displays correct overlay colours for utility channels again
	* BUGFIX - Saved GIF files are now properly labeled GIF89 if transparent and GIF87 if not
	* BUGFIX - GIF files without any image blocks now properly fail to load (instead of producing a 0x0 image)
	* BUGFIX - Composited GIF animation frames that use more than 256 colours now do not come out with wrong colours in certain cases
	* BUGFIX - Exploding, or loading into layers, GIF animation files with screen size and/or frame position outside canvas size limit no longer causes crash
	* BUGFIX - When first frame of GIF animation is loaded, ".000" is added to the filename, as it should be
	* BUGFIX - Loading certain broken BMP files no longer causes crash